--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-##Welcome to Shaoqiang Zhang's page!
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie6" lang="zh-cn"><![endif]-->
+<!--[if IE 7 ]><html class="ie7" lang="zh-cn"><![endif]-->
+<!--[if IE 8 ]><html class="ie8" lang="zh-cn"><![endif]-->
+<!--[if IE 9 ]><html class="ie9" lang="zh-cn"><![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html class="" lang="zh-cn"><!--<![endif]-->
+<head>
+<meta charset="utf-8" />
+<title>天津师范大学, 张少强, Tianjin Normal University, Shaoqiang Zhang</title>
+<meta name="description" content=" 天津师范大学 计算机与信息工程学院 张少强 " />
+<meta name="keywords" content="天津师范大学,计算机与信息工程学院,软件学院,张少强" />
+<!-- case ie version; -->
+</head>
+<body class="standard">
+<a name="top"></a>
+<table style="width: 100%">
+
+	<tr>
+		<td style="width: 210px">
+		<img src="images/200710301.jpg" width="200" height="260" /> 
+		</td>
+		<td>
+		<strong><span class="style5"><span class="style7">张少强</span></span></strong><span class="style9">, 
+		博士/教授/硕士生导师</span><span class="style8">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="sqzhang/index.html">>>English Version</a><br />
+		</span><span class="style1"><span class="style7">计算机科学系,<br />
+		<a target="_blank" href="http://xxgc.tjnu.edu.cn/">计算机与信息工程学院</a>, <br />
+		<a target="_blank" href="http://www.tjnu.edu.cn">天津师范大学</a>, 天津市西青区宾水西道393号，300387</span></span><span class="style2"><br />
+		<span class="style7">
+		<br />
+		电子邮箱：<span class="style11">sqzhang</span> AT
+		<span class="style11">163.com </span>&nbsp;或
+		<span class="style11">zhangshaoqiang</span> AT <span class="style11">
+		mail.tjnu.edu.cn</span> <br/> 办公地点：博理楼C区201室
+		</span></span>
+		</td>
+	</tr>
+</table>
+<hr />
+<p class="style8"><strong>学习工作简历：</strong></p>
+<ul>
+	<li class="style7">1994-1998，山东大学 数学学院运筹学专业，本科，理学学士</li>
+	<li class="style7">1999-2004，山东大学 数学学院运筹学与控制论专业，硕博连读研究生，理学博士</li>
+	<li class="style7">2004-2006，天津师范大学计信学院，讲师</li>
+	<li class="style7">2007-2010，美国北卡罗来纳大学夏洛特分校 生物信息学与基因组学系，博士后</li>
+	<li class="style7">2006-2012，天津师范大学计信学院，副教授</li>
+	<li class="style7">2012至今，天津师范大学计信学院，教授</li>
+</ul>	
+<p class="style8"><strong>研究方向:</strong></p>
+<p class="style7">(1) 组合优化 (2) 图论算法 (3) 生物信息学 (4) 高性能计算</p>
+<p class="style8"><strong>发表论文（详见下列数据库）</strong></p>
+
+<ul>
+	<li class="style7"> ResearchGate: <a target="_blank" href="http://www.researchgate.net/profile/Shaoqiang_Zhang/publications">Shaoqiang Zhang </a></li>
+	<li class="style7"> ORCID: <a target="_blank" href="http://orcid.org/0000-0002-4127-0539">0000-0002-4127-0539</a></li>
+
+</ul>
+<p class="style8"><strong>科研项目</strong></p>
+<ul>
+	<li class="style7">现主持 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</li>
+	<li class="style7">现主持 天津自然科学基金一般项目： “运用新一代测序数据对真核生物调控模块的从头预测研究” （批准号16JCYBJC23600），2016-2019；</li>
+	<li class="style7">主持完成 国家自然科学基金青年基金项目：“真菌顺式调控模体与模块的全基因组范围计算预测” （批准号61103073），2011-2014；</li>
+	<li class="style7">主持完成 天津自然科学基金面上项目：“真菌生物全基因组范围转录因子结合位点的计算预测研究”（项目号11JCYBJC26600），2011-2014；</li>
+	<li class="style7">主持完成天津教委高校科技发展计划项目：“电路与网络中优化问题的算法分析与设计”（No.20071519, 2005年7月-2010年12月）</li>
+</ul>
+<p class="style8"><strong>算法工具与数据库（项目组开发）</strong></p>
+		<ul>
+		<li class="style7">GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。<br/> 网址： <a href="http://gleclubs.uncc.edu/pbs/"> http://gleclubs.uncc.edu/pbs</a> 文献：<a href="http://www.ncbi.nlm.nih.gov/pubmed/19383880">PMID:19383880 </a></li>
+		<li class="style7">eGLECLUBS：一组进化距离相近的原核生物全基因组范围转录因子结合位点预测算法及数据库。<br/> 网址： <a href="http://gleclubs.uncc.edu/pbs/"> http://gleclubs.uncc.edu/pbs</a>文献：<a href="http://www.ncbi.nlm.nih.gov/pubmed/20653963"> PMID: 20653963</a> </li> 
+		<li class="style7">MotifClick：一个全新的模体发现算法（及在线工具）。<br/> 网址：<a href="http://motifclick.uncc.edu/">http://motifclick.uncc.edu</a> 文献：<a target="_blank" href="http://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436</a></li>
+		<li class="style7">SPIC：模体相似性近似计算公式。<br/> （<a href="http://bioinfo.uncc.edu/szhang/app/spic.zip">C++源代码</a>）文献：<a href="http://www.ncbi.nlm.nih.gov/pubmed/24564945">PMID:24564945 </a> </li>
+		<li class="style7">CLIMP：一个大规模模体数据并行聚类算法（及在线工具）。<a href="climp.html">点击进入</a></li>
+		<li class="style7">CREPY: 一个全新的酵母菌全基因组范围顺式调控元件预测算法软件包。（请email索取）
+	
+	</ul>	
+<p class="style8"><strong>指导研究生</strong></p>
+<ul>
+	<li class="style7"> 现指导研究生4名：</li>
+	<ul>
+	<li class="style7">李静，张志红，李婷，陈艳楠</li>
+	</ul>
+	<li class="style7"> 已毕业业研究生（15名）：</li>
+	<ul>
+		<li class="style7">2007：丁春勇(天津师范大学)；侯刚(中国人民银行天津支行)</li>
+		<li class="style7">2012：车振凯(天津音乐学院)；陈超(VOLVO)；柴秀琴(天津工业大学)</li>
+		<li class="style7">2013：连高欣(天津气象局)；陈龙鑫(福州大学)</li>
+		<li class="style7">2014：耿丹丹(北京 BioMarker Tech.)；汪珩(天津高新区)；韩旭(长春教委教育技术中心)</li>
+		<li class="style7">2015：张蕊(天津市第一中级人民法院 )；张甜(天津师范大学滨海附属小学)；宁静雁(大同大学)；王芳(江苏淮安市清浦开明中学)</li>
+	<li class="style7">2016：张莹（国家电网新疆电力公司）</li>
+	</ul>
+</ul>
+<p class="style8"><strong>本科授课（含课件）</strong></p>
+	<ul>
+	<li class="style7">校级优秀课：<a target="_blank" href="math1.html">高等数学2-1</a></li>
+	<li class="style7"><a href="math2.html">高等数学2-2</a></li>
+	<li class="style7">概率论与数理统计</li>
+	<li class="style7">学校通识课：<a href="game.html">信息与博弈</a></li>
+	<li class="style7"><a href="parallelprogram.html">并行程序设计</a><img src="images/new_star.gif" width="25" height="25" /></li>
+	</ul>
+<p class="style8"><strong>研究生授课</strong></p>
+	<ul>
+	<li class="style7">并行计算(Parallel Computing)</li>
+	<li class="style7">组合优化(Combinatorial optimization)</li>
+	<li class="style7">生物信息学讨论班(Computational Genomics and Bioinformatics)</li>
+	</ul>
+	
+<p class="style8"><strong>专利申请</strong></p>
+	<ul>
+	<li class="style7">周曦国，张少强，刘岩凯：多功能体质测试仪，专利号CN201210488544.8。</li>
+	<li class="style7">周曦国，张少强，刘岩凯：一种多功能体质测试仪，专利号CN201220633438.X。</li>
+	<li class="style7">赵欣 张少强：基于疾病特征的医学信息本体数据库的建立方法，申请号 201410844664.6</li>
+	<li class="style7">赵欣 张少强：基于医学信息本体数据库的关联药品的自我分析方法，申请号201410847777.1</li>
+	<li class="style7">赵欣 张少强：基于疾病圈数据信息的自我诊疗方法，申请号201410848793.2</li>
+	<li class="style7">赵欣 张少强：基于医学信息本体数据库的疾病自我分析方法，申请号201410848794.7</li>
+	</ul>
+
+<p class="style4"><em>Updated by April 30, 2016</p>
+<p class="style7"><a href="#top">返回顶部</a></p>		
+</body>
+
+</html>
