--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ border: none;
     <li><a href="computing.htm" title="Computing Tools"><span>Software</span></a></li>
 	<li><a href="patents.htm" title="Patents"><span>Patents</span></a></li>
     <li><a href="teaching.htm" title="Courses"><span>Teaching</span></a></li>
-	<li><a href="link.htm" title="Profile Links"><span>Useful Links</span></a></li>
+	<li><a href="link.htm" title="Profile Links"><span>Profile Links</span></a></li>
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
 
 
@@ -203,12 +203,10 @@ border: none;
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
 					<img border="0" src="images/zsq.JPG" width="119" height="142"></p>
-					<font size="2"> <p>张少强 (天津师范大学, 教授) Professor</p>
-<p>研究兴趣：生物信息学 (Bioinformatics) , 
-高性能计算(High-performance Computing) , 组合优化(Combinatorial Optimization)</p>
+					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
+<p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
 
-<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
-最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测等。</p></font>
+<p></p></font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -227,7 +225,16 @@ border: none;
 					<p>&nbsp;</p><p>
 					<a target="_blank" href="http://">
 					<img border="0" src="images/bioinfologo.gif" width="266" height="170" align="right"></a></p>
-					<p></div>
+					
+					<p><font size="2">张少强 (天津师范大学, 教授)</p>
+					<p>研究兴趣：生物信息学, 高性能计算, 组合优化</p>
+
+					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
+					最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测等。</p></font>
+					<p>The main work is to use combinatorial optimization techiques to design high-performance 
+algorithms for predicting the functions of genome sequences.
+Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions.</p>
+					</div>
             </div>	
 </div>
 
