--- a/cv.htm
+++ b/cv.htm
@@ -182,7 +182,7 @@ border: none;
     <li><a href="computing.htm" title="Computing Tools"><span>Software</span></a></li>
 	<li><a href="patents.htm" title="Patents"><span>Patents</span></a></li>
     <li><a href="teaching.htm" title="Courses"><span>Teaching</span></a></li>
-	<li><a href="link.htm" title="Profile Links"><span>Useful Links</span></a></li>
+	<li><a href="link.htm" title="Profile Links"><span>Profile Links</span></a></li>
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
 
 
@@ -225,6 +225,37 @@ border: none;
 <p>1994-1998, B.Sc., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
 
 <p>1999-2004, Ph.D., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
+
+<hr />
+
+<h3><font size="3">工作经历 </font></h3>
+
+
+<p>•天津师范大学  计算机与信息工程学院,教授 | 2012.10-至今</p>
+
+
+<p>•美国北卡罗来纳大学夏洛特分校  生物信息学与基因组学系,博士后 | 2007.4-2010.7</p>
+
+
+<p>•天津师范大学  计算机与信息工程学院,副教授 | 2006.10-2012.9</p>
+
+
+
+
+
+<p>◦2004-2006, Assistant Professor, College of Computer and Information Engeering, Tianjin Normal University, Tianjin, China</p>
+
+
+<p>◦2007-2010, Postdoctoral Research Fellow, Dr. Zhengchang Su's lab, Department of Bioinformatics and Genomics, Univerity of North Carolina at Charlotte, NC, USA</p>
+
+
+<p>◦2006-2012, Associate Professor, College of Computer and Information Engeering, Tianjin Normal University, Tianjin, China</p>
+
+
+<p>◦2012-present, Professor, College of Computer and Information Engineering, Tianjin Normal University, Tianjin, China</p>
+
+
+
 					</div>
             </div>	
 </div>
