--- a/cv.htm
+++ b/cv.htm
@@ -202,7 +202,7 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
-					<img border="0" src="images/zsq.JPG" width="119" height="142"></p>
+					<img border="0" src="images/zsqp.jpg" width="140" height="225"></p>
 					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
 <p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
 
