--- a/funds.htm
+++ b/funds.htm
@@ -198,13 +198,13 @@ border: none;
 <div class="left">
 			<div class="left_side">
 				<div class="box_top">
-					<h2>About me:</h2>
+					<h2>Funds:</h2>
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
-					<img border="0" src="images/zsq.JPG" width="119" height="142"></p>
-					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
-<p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
+					
+					<font size="2"> <p>NSF of China</p>
+<p>NSF of Tianjin</p>
 
 <p></p></font>
 				</div>
