--- a/cv.htm
+++ b/cv.htm
@@ -178,13 +178,12 @@ border: none;
     <li><a href="index.html" title="Home"><span>Home</span></a></li>
     <li><a href="cv.htm" title="My Profile"><span>CV</span></a></li>
     <li><a href="funds.htm" title="Research funds"><span>Projects</span></a></li>
-    <li><a href="pub.htm" title="Publications"><span>Publications</span></a></li>
-    <li><a href="computing.htm" title="Computing Tools"><span>Software</span></a></li>
+    <li><a href="pub.htm" title="Publications"><span>Pub.</span></a></li>
+    <li><a href="computing.htm" title="Computing Tools"><span>Tools</span></a></li>
 	<li><a href="patents.htm" title="Patents"><span>Patents</span></a></li>
-    <li><a href="teaching.htm" title="Courses"><span>Teaching</span></a></li>
-	<li><a href="link.htm" title="Profile Links"><span>Profile Links</span></a></li>
+    <li><a href="teaching.htm" title="Courses"><span>Teach.</span></a></li>
+	<li><a href="grad.htm" title="Graduate students"><span>Graduates</span></a></li>
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
-
 
   </ul>
 </div>
@@ -202,11 +201,21 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
-					<img border="0" src="images/zsqp.jpg" width="140" height="225"></p>
-					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
-<p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
+					<img border="0" src="images/zsqp.JPG" width="140" height="225"></p>
+					
+<h3><font size="3">Profile links </font></h3>
 
-<p></p></font>
+
+<font size="2">
+<p>•<a target="_blank" href="http://www.researchgate.net/profile/Shaoqiang_Zhang">ResearchGate</a></p>
+<p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
+<p>•<a target="_blank" href="http://www.researcherid.com/rid/E-5367-2010">ResearcherID</a></p>
+<p>•<a target="_blank" href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Shaoqiang.html">DBLP</a></p>
+<p>•<a target="_blank" href="http://xueshu.baidu.com/scholarID/CN-B89CH9RJ">百度学术</a></p>
+
+
+
+</font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -253,6 +262,7 @@ border: none;
 
 
 <p>◦2012-present, Professor, College of Computer and Information Engineering, Tianjin Normal University, Tianjin, China</p>
+
 
 
 
