--- a/funds.htm
+++ b/funds.htm
@@ -178,12 +178,13 @@ border: none;
     <li><a href="index.html" title="Home"><span>Home</span></a></li>
     <li><a href="cv.htm" title="My Profile"><span>CV</span></a></li>
     <li><a href="funds.htm" title="Research funds"><span>Projects</span></a></li>
-    <li><a href="pub.htm" title="Publications"><span>Publications</span></a></li>
-    <li><a href="computing.htm" title="Computing Tools"><span>Software</span></a></li>
+    <li><a href="pub.htm" title="Publications"><span>Pub.</span></a></li>
+    <li><a href="computing.htm" title="Computing Tools"><span>Tools</span></a></li>
 	<li><a href="patents.htm" title="Patents"><span>Patents</span></a></li>
-    <li><a href="teaching.htm" title="Courses"><span>Teaching</span></a></li>
-	<li><a href="link.htm" title="Profile Links"><span>Profile Links</span></a></li>
+    <li><a href="teaching.htm" title="Courses"><span>Teach.</span></a></li>
+	<li><a href="grad.htm" title="Graduate students"><span>Graduates</span></a></li>
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
+
 
 
   </ul>
