--- a/patents.htm
+++ b/patents.htm
@@ -186,87 +186,36 @@ border: none;
 <div class="left">
 			<div class="left_side">
 				<div class="box_top">
-					<h2>Tool Development</h2>
+					<h2>Patents</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 900px">
+				<div class="box" style="width: 144px; height: 300px">
 					<p>
 					
-					<font size="2"> <p>GLECLUBS</p>
-<p>eGLECLUBS</p>
-<p>MotifClick</p>
-<p>SPIC</p>
-<p>CLIMP</p>
-<p>FisherMP</p>
-<p>StepLink</p><p>CREMP</p></font>
+					<font size="2"> </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 520px; height: 900px">
+            <div class="right_side" style="width: 500px; height: 300px">
 				<div class="article">
 
 
 
-<h3><font size="3">开发的计算工具 </font></h3>
+<h3><font size="3">专利申请 </font></h3>
 <hr />
 
+<p>1.	周曦国，张少强，刘岩凯：多功能体质测试仪，专利号CN201210488544.8</p>
+<p>2.	周曦国，张少强，刘岩凯：一种多功能体质测试仪，专利号CN201220633438.X</p>
+<p>3.	赵欣 张少强：基于疾病特征的医学信息本体数据库的建立方法，申请号 201410844664.6</p>
+<p>4.	赵欣 张少强：基于医学信息本体数据库的关联药品的自我分析方法，申请号201410847777.1</p>
+<p>5.	赵欣 张少强：基于疾病圈数据信息的自我诊疗方法，申请号201410848793.2</p>
+<p>6.	赵欣 张少强：基于医学信息本体数据库的疾病自我分析方法，申请号201410848794.7</p>
 
-<p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
-(The related article: PMID:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/19383880">19383880)</a></p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> 
-</p>
 
-<hr />
 
-<p>•eGLECLUBS：一组进化距离相近的原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p>eGLECLUBS is an extended version of GLECLUBS for simultaneously predicting binding sites in a group of closely related prokaryotic genomes.</p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> </p>
-<p>The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/20653963">PMID: 20653963</a></p>
-
-<hr />
-
-<p>•MotifClick：一个全新的模体发现算法。</p>
-
-<p>MotifClick: A novel motif finding tool for predicting transcription factor binding sites.
- (The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436)</a></p>
-<p>Website: <a target="_blank" href="http://motifclick.uncc.edu"> http://motifclick.uncc.edu</a></p>
-<p> Source code: <a target="_blank" href="http://motifclick.uncc.edu">https://github.com/shaoqiangzhang/motifclick</a></p>
-
-<hr />
-
-<p>•SPIC：模体相似性近似计算公式。(PMID:24564945)</p>
-
-<p>SPIC: a novel metric for calculating transcription factor binding motif similarity (The related publication: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/24564945">PMID:24564945</a>)</p>
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/spic">https://github.com/shaoqiangzhang/spic</a></p>
-
-<hr />
-
-<p>•CLIMP：一个大规模模体数据并行聚类算法。</p>
-
-<p>CLIMP：a clustering algorithm for massive data with openMP parallel computing design (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/27487245">PMID:27487245</a>)</p>
-
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/climp"> https://github.com/shaoqiangzhang/climp</a></p> 
-
-<hr />
-
-<p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。</p>
-
-<p>FisherMP: a motif finding program with openMP parallel design for ChIP-Seq binding peaks </p>
-<p>Source code: https://github.com/shaoqiangzhang/fishermp </p>
-
-<hr />
-
-<p>•CREMP: 一个全新的全基因组范围顺式调控元件和模块预测算法软件包。</p>
-
-<hr />
-
-<p>•StepLink：基于RNA-Seq的转录组拼接算法。</p>
-
-<p>Source code: https://github.com/shaoqiangzhang/steplink  </p>
 
 					</div>
-            </div>
+            </div>	
 </div>
 
 <div class="header_bottom"></div>
