--- a/teaching.htm
+++ b/teaching.htm
@@ -174,6 +174,7 @@ border: none;
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
 
 
+
   </ul>
 </div>
 
@@ -186,87 +187,41 @@ border: none;
 <div class="left">
 			<div class="left_side">
 				<div class="box_top">
-					<h2>Tool Development</h2>
+					<h2>Teaching</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 900px">
+				<div class="box" style="width: 144px; height:300px">
 					<p>
 					
-					<font size="2"> <p>GLECLUBS</p>
-<p>eGLECLUBS</p>
-<p>MotifClick</p>
-<p>SPIC</p>
-<p>CLIMP</p>
-<p>FisherMP</p>
-<p>StepLink</p><p>CREMP</p></font>
+					<font size="2"> </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 520px; height: 900px">
+            <div class="right_side" style="width: 500px; height: 300px">
 				<div class="article">
 
 
 
-<h3><font size="3">开发的计算工具 </font></h3>
+
+<h3><font size="3">本科授课(Undergraduate Teaching)</font></h3>
+<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）<a target="_blank" href="https://pan.baidu.com/s/19hZKV9rB4_xll8-295gJkQ">课件下载链接</a></p>
+<p>•	高等数学2-2 (课件下载) （Advanced Math.2-2）</p>
+<p>•	学校通识课：<a target="_blank" href="http://www.escience.cn/people/sqzhang/gametheory.html"> 信息与博弈(Information and Games)</a></p>
+<p>•	并行程序设计（Parallel programming)</p>
 <hr />
+<h3><font size="3">研究生授课(Graduate Teaching)</font></h3>
+<p>•	并行计算(Parallel Computing)</p>
+<p>•	现代优化算法(Moden optimization algorithms)</p>
+<p>•	生物信息学(Bioinformatics)</p>
 
 
-<p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
-(The related article: PMID:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/19383880">19383880)</a></p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> 
-</p>
 
-<hr />
 
-<p>•eGLECLUBS：一组进化距离相近的原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p>eGLECLUBS is an extended version of GLECLUBS for simultaneously predicting binding sites in a group of closely related prokaryotic genomes.</p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> </p>
-<p>The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/20653963">PMID: 20653963</a></p>
 
-<hr />
-
-<p>•MotifClick：一个全新的模体发现算法。</p>
-
-<p>MotifClick: A novel motif finding tool for predicting transcription factor binding sites.
- (The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436)</a></p>
-<p>Website: <a target="_blank" href="http://motifclick.uncc.edu"> http://motifclick.uncc.edu</a></p>
-<p> Source code: <a target="_blank" href="http://motifclick.uncc.edu">https://github.com/shaoqiangzhang/motifclick</a></p>
-
-<hr />
-
-<p>•SPIC：模体相似性近似计算公式。(PMID:24564945)</p>
-
-<p>SPIC: a novel metric for calculating transcription factor binding motif similarity (The related publication: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/24564945">PMID:24564945</a>)</p>
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/spic">https://github.com/shaoqiangzhang/spic</a></p>
-
-<hr />
-
-<p>•CLIMP：一个大规模模体数据并行聚类算法。</p>
-
-<p>CLIMP：a clustering algorithm for massive data with openMP parallel computing design (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/27487245">PMID:27487245</a>)</p>
-
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/climp"> https://github.com/shaoqiangzhang/climp</a></p> 
-
-<hr />
-
-<p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。</p>
-
-<p>FisherMP: a motif finding program with openMP parallel design for ChIP-Seq binding peaks </p>
-<p>Source code: https://github.com/shaoqiangzhang/fishermp </p>
-
-<hr />
-
-<p>•CREMP: 一个全新的全基因组范围顺式调控元件和模块预测算法软件包。</p>
-
-<hr />
-
-<p>•StepLink：基于RNA-Seq的转录组拼接算法。</p>
-
-<p>Source code: https://github.com/shaoqiangzhang/steplink  </p>
+<p></p>
 
 					</div>
-            </div>
+            </div>	
 </div>
 
 <div class="header_bottom"></div>
