--- a/grad.htm
+++ b/grad.htm
@@ -174,6 +174,7 @@ border: none;
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
 
 
+
   </ul>
 </div>
 
@@ -186,87 +187,49 @@ border: none;
 <div class="left">
 			<div class="left_side">
 				<div class="box_top">
-					<h2>Tool Development</h2>
+					<h2>Advisee</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 900px">
+				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2"> <p>GLECLUBS</p>
-<p>eGLECLUBS</p>
-<p>MotifClick</p>
-<p>SPIC</p>
-<p>CLIMP</p>
-<p>FisherMP</p>
-<p>StepLink</p><p>CREMP</p></font>
+					<font size="2">•	2018级拟招收研究生2名（计算机科学学硕1名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, 英语四级以上，研究生初试成绩300分以上。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 520px; height: 900px">
+            <div class="right_side" style="width: 500px; height: 500px">
 				<div class="article">
 
 
 
-<h3><font size="3">开发的计算工具 </font></h3>
+<h3><font size="3">指导研究生 </font></h3>
 <hr />
 
 
-<p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
-(The related article: PMID:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/19383880">19383880)</a></p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> 
-</p>
 
+<p>•	现指导研究生5名：
+<p>&nbsp;	武思文，冯艳霞，李艳慧（2016级）
+<p>&nbsp;	邵帅，薛利祥（2017级）
 <hr />
-
-<p>•eGLECLUBS：一组进化距离相近的原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p>eGLECLUBS is an extended version of GLECLUBS for simultaneously predicting binding sites in a group of closely related prokaryotic genomes.</p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> </p>
-<p>The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/20653963">PMID: 20653963</a></p>
-
+<p>•	已毕业研究生（19名）：</p>
+<p>&nbsp;	2007：丁春勇(天津师范大学)；侯刚(中国人民银行天津支行)</p>
+<p>&nbsp;	2012：车振凯(天津音乐学院)；陈超(VOLVO)；柴秀琴(天津工业大学)</p>
+<p>&nbsp;	2013：连高欣(天津气象局)；陈龙鑫(福州大学)</p>
+<p>&nbsp;	2014：耿丹丹(北京 BioMarker Tech.)；汪珩(天津高新区)；韩旭(长春教委)</p>
+<p>&nbsp;	2015：张蕊(天津市第一中级人民法院)；张甜(天津师范大学滨海附属小学)；宁静雁(大同大学)；王芳(江苏淮安市清浦开明中学)</p>
+<p>&nbsp;	2016：张莹（国家电网新疆电力公司)</p>
+<p>&nbsp;	2017：李静（天津南开国税局）；张志红</p>
+<p>&nbsp;	2018：李婷，陈艳楠</p>
 <hr />
+<p></p>
 
-<p>•MotifClick：一个全新的模体发现算法。</p>
 
-<p>MotifClick: A novel motif finding tool for predicting transcription factor binding sites.
- (The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436)</a></p>
-<p>Website: <a target="_blank" href="http://motifclick.uncc.edu"> http://motifclick.uncc.edu</a></p>
-<p> Source code: <a target="_blank" href="http://motifclick.uncc.edu">https://github.com/shaoqiangzhang/motifclick</a></p>
 
-<hr />
 
-<p>•SPIC：模体相似性近似计算公式。(PMID:24564945)</p>
-
-<p>SPIC: a novel metric for calculating transcription factor binding motif similarity (The related publication: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/24564945">PMID:24564945</a>)</p>
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/spic">https://github.com/shaoqiangzhang/spic</a></p>
-
-<hr />
-
-<p>•CLIMP：一个大规模模体数据并行聚类算法。</p>
-
-<p>CLIMP：a clustering algorithm for massive data with openMP parallel computing design (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/27487245">PMID:27487245</a>)</p>
-
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/climp"> https://github.com/shaoqiangzhang/climp</a></p> 
-
-<hr />
-
-<p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。</p>
-
-<p>FisherMP: a motif finding program with openMP parallel design for ChIP-Seq binding peaks </p>
-<p>Source code: https://github.com/shaoqiangzhang/fishermp </p>
-
-<hr />
-
-<p>•CREMP: 一个全新的全基因组范围顺式调控元件和模块预测算法软件包。</p>
-
-<hr />
-
-<p>•StepLink：基于RNA-Seq的转录组拼接算法。</p>
-
-<p>Source code: https://github.com/shaoqiangzhang/steplink  </p>
+<p></p>
 
 					</div>
-            </div>
+            </div>	
 </div>
 
 <div class="header_bottom"></div>
