--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
-					<img border="0" src="images/zsqp.JPG" width="140" height="225"></p>
+					<img border="0" src="zsqp.JPG" width="140" height="225"></p>
 					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
 <p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
 
