--- a/pub.htm
+++ b/pub.htm
@@ -215,107 +215,75 @@ border: none;
     <div class="page">
       <div class="right-column">
         <ul class="STYLE11">
-<li class="STYLE9" style="margin: 0; padding: 0"><a target="_blank" href="https://dblp.org/rec/html/journals/arscom/ZuoSZH18">The linear t-arboricity of complete bipartite graphs</a><br />
 
-Liancui Zuo and Chunhong Shang and Shaoqiang Zhang and Shengjie He. Ars Comb.: 2018 ,137 ,355--364 <br /></li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><a target="_blank" href="https://doi.org/10.1038/s41598-017-18072-9"> Integrated transcriptomic analysis of Trichosporon Asahii uncovers the core genes and pathways of fluconazole resistance</a><br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i>Integrated transcriptomic analysis of Trichosporon Asahii uncovers the core genes and pathways of fluconazole resistance</i><br />
 
 Li Haitao, Wang Congmin, Chen Yong, Zhang Shaoqiang,Yang Rongya. Scientific Reports: 2017 ,7 ,17847</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Equitable coloring of Cartesian product of some graphs<br />
 
-Liancui Zuo andShasha Ma andShaoqiang Zhang. Ars Comb.: 2017 ,134 ,325--337</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">CLIMP: Clustering Motifs via Maximal Cliques with Parallel Computing Design<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i>CLIMP: Clustering Motifs via Maximal Cliques with Parallel Computing Design</i><br />
 
 Zhang, Shaoqiang and Chen, Yong. PLOS ONE: 2016 ,11 ,1-17</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0">Investigating Evolutionary Dynamics of RHA1 Operons<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i>Investigating Evolutionary Dynamics of RHA1 Operons</i><br />
 
 Yong Chen, Dandan Geng, Kristina Ehrhardt, Shaoqiang Zhang. Evolutionary Bioinformatics: 2016 ,12,157--163</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0">The k-Path Vertex Cover in Product Graphs of Stars and Complete Graphs<br />
 
-Liancui Zuo , Bitao Zhang, and Shaoqiang Zhang. IAENG International Journal of Applied Mathematics:2016 ,46(1)</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">Equitable colorings of cartesian products of fans with bipartite graphs<br />
-
-Zuo, L. and Wu, F. and Zhang, S.. Italian Journal of Pure and Applied Mathematics: 2015 ,35 ,91−100</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">Equitable Colorings of Cartesian Product Graphs of Wheels with Complete Bipartite Graphs<br />
-
-Zuo, L., Wu, F., Zhang, S.. WSEAS TRANSACTIONS on MATHEMATICS: 2014 ,13 ,236-245</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">SPIC: A novel similarity metric for comparing transcription factor binding site motifs based on information contents<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i>SPIC: A novel similarity metric for comparing transcription factor binding site motifs based on information contents</i><br />
 
 Zhang, Shaoqiang and Zhou, Xiguo and Du, Chuanbin and Su, Zhengchang. BMC Systems Biology: 2013,7(2) ,S14</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Evolution and Function of Prokaryotic Dynamin-Like Proteins<br />
+<li class="STYLE9" style="margin: 0; padding: 0"> <i>Evolution and Function of Prokaryotic Dynamin-Like Proteins</i><br />
 
 耿丹丹 ， Simon Cichello ， 张少强 ， 陈勇. Aata Biophysica Sinica (生物物理学报): 2013 ,29(9) ,646-657</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> MotifClick: prediction of cis-regulatory binding sites via merging cliques<br />
+<li class="STYLE9" style="margin: 0; padding: 0"> MotifClick: prediction of cis-regulatory binding sites via merging cliques</i><br />
 
-Zhang, Shaoqiang and Li, Shan and Niu, Meng and Pham, Phuc T. and Su, Zhengchang. BMC Bioinformatics: 2011 ,12(1) ,23</li>8
+Zhang, Shaoqiang and Li, Shan and Niu, Meng and Pham, Phuc T. and Su, Zhengchang. BMC Bioinformatics: 2011 ,12(1) ,238</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Simultaneous prediction of transcription factor binding sites in a group of prokaryotic genomes<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> Simultaneous prediction of transcription factor binding sites in a group of prokaryotic genomes</i><br />
 
 Zhang, Shaoqiang and Li, Shan and Pham, Phuc T. and Su, Zhengchang. BMC Bioinformatics: 2010 ,11(1),397</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Genome-wide de novo prediction of cis-regulatory binding sites in prokaryotes<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> Genome-wide de novo prediction of cis-regulatory binding sites in prokaryotes</i><br />
 
 Zhang, Shaoqiang and Xu, Minli and Li, Shan and Su, Zhengchang. Nucleic Acids Research: 2009 ,37(10),e72</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0">  A novel information contents based similarity metric for comparing {TFBS} motifs<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i>  A novel information contents based similarity metric for comparing {TFBS} motifs</i><br />
 
 Shaoqiang Zhang and Lifen Jiang and Chuanbin Du and Zhengchang Su. 6th {IEEE} International Conference on Systems Biology, {ISB} 2012, Xian, China, August 18-20, 2012: 2012 ,32--36</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> A Simulated Annealing Algorithm for Resource Allocation and Scheduling with Precedence Constraints in the GLECLUBS/eGLECLUBS Pipelines<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> A Simulated Annealing Algorithm for Resource Allocation and Scheduling with Precedence Constraints in the GLECLUBS/eGLECLUBS Pipelines</i><br />
 
 Shaoqiang Zhang and Huazhi Sun and Guojun Li and Zhengchang Su. 14th {IEEE} International Conference on Computational Science and Engineering, {CSE} 2011, Dalian, China, August 24-26, 2011:2011 ,421--426</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Resource and Bandwidth Allocation on a Computational Grid with Tree Topology<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> Resource and Bandwidth Allocation on a Computational Grid with Tree Topology</i><br />
 
 S. Zhang and C. Ding and G. Hou. 2006 Fifth International Conference on Grid and Cooperative Computing (GCC06): 2006(Oct) ,42-45</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> An Efficient PTAS for Semiconductor Burn-in Scheduling with Release Dates to Minimize Maximum Delivery Time<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> An Efficient PTAS for Semiconductor Burn-in Scheduling with Release Dates to Minimize Maximum Delivery Time</i><br />
 
 ZHANG Shao-qiang, MA Xi-rong. MATHEMATICA APPLICATA: 2006 ,19(2) ,374-380</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Minimizing makespan with release times on identical parallel batching machines<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> Minimizing makespan with release times on identical parallel batching machines</i><br />
 
 Shuguang Li and Guojun Li and Shaoqiang Zhang. Discrete Applied Mathematics: 2005 ,148(1) ,127 - 134</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0">  A Linear Time Algorithm for the Minimum-weight Feedback Vertex Set Problem in Series-parallel Graphs<br />
+<li class="STYLE9" style="margin: 0; padding: 0"> <i> A Linear Time Algorithm for the Minimum-weight Feedback Vertex Set Problem in Series-parallel Graphs</i><br />
 
 Zhang, Shao-qiang and Li, Guo-jun and Li, Shu-guang. Acta Mathematicae Applicatae Sinica: 2004 ,20(4),579--588</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0">  Minimizing Maximum Lateness on Identical Parallel Batch Processing Machines<br />
+<li class="STYLE9" style="margin: 0; padding: 0"> <i> Minimizing Maximum Lateness on Identical Parallel Batch Processing Machines</i><br />
 
 Shuguang Li and Guojun Li and Shaoqiang Zhang. Computing and Combinatorics, 10th Annual International Conference, {COCOON} 2004, Jeju Island, Korea, August 17-20, 2004, Proceedings: 2004,3106 ,229--237</li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> Two feedback problems for graphs with bounded tree-width<br />
 
-Zhang, Shaoqiang and Li, Guojun and Sohn, Moo-Young. Applied Mathematics-A Journal of Chinese Universities: 2004(Jun) ,19(2) ,149--154</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">  A PTAS for the scheduling and wavelength assignment problem in WDM networks<br />
-
-Zhang, Shaoqiang and Li, Guojun. Mathematica Applicata(应用数学): 2004 ,17(01) ,67-72</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">  A linear time algorithm for minimum-weight feedback vertex set problem in outerplanar graphs<br />
-
-Zhang, Shaoqiang and Wang, Xiao and Li, Guojun. Journal of Mathematical Research & Exposition: 2004,24(01) ,610–618</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">  几类特殊平面图的圈包装问题<br />
-
-张少强,王继强,李曙光. 山东大学学报(理学版),JOURNAL OF SHANDONG UNIVERSITY(NATURAL SCIENCE): 2004 ,39(1) ,1-4</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0">  环形全光WDM网络的波长分配<br />
+<li class="STYLE9" style="margin: 0; padding: 0"> <i> 环形全光WDM网络的波长分配</i><br />
 
 李国君,张少强,Ousmane Samake,陈光亭. 应用数学学报: 2003 , 26(3)  </li>
 
-<li class="STYLE9" style="margin: 0; padding: 0"> 全光双向网络中的波长转换<br />
+<li class="STYLE9" style="margin: 0; padding: 0"><i> 全光双向网络中的波长转换</i><br />
 
 张少强,李国君,李曙光. 软件学报: 2002 , 13(10) </li>
 
