--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
 					<p>
-					<img border="0" src="zsqp.JPG" width="140" height="225"></p>
+					<img border="0" src="images/zsqp.JPG" width="140" height="225"></p>
 					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
 <p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
 
@@ -217,12 +217,15 @@ border: none;
 					<h3>&nbsp;</h3>
 					<h3><font size="3">**** </font></h3>
 					
-					<p><font size="3">本学期开设课程（2018年秋季）</font></p>
-					<p><font size="2">1. 计算机科学与技术专业基础课《高等数学2-1》。<i><a target="_blank" href="https://pan.baidu.com/s/19hZKV9rB4_xll8-295gJkQ">
-					<span style="TEXT-DECORATION: none">课件链接为百度网盘。</span></a></i>
+					<p><font size="3">本学期开设课程（2019年春季）</font></p>
+					<p><font size="2">1. 2018级计算机科学与技术专业基础课《高等数学2-2》。</p> <i><a target="_blank" href="https://pan.baidu.com/share/init?surl=-fJQZaobnCKb6hqEWkpuzw">
+					<span style="TEXT-DECORATION: none">百度网盘课件下载。（提取码kc3w）</span></a></i>
+
 					<h3>&nbsp;</h3>
+										<p><font size="2">2. 研究生课程《高等工程数学》。<i><a target="_blank" href="https://pan.baidu.com/share/init?surl=kfifXLomWA5WhYBF96eO3A">
+					<span style="TEXT-DECORATION: none">百度网盘课件下载。（提取码9zrh）</span></a></i>
 					<h3>&nbsp;</h3>
-					<h3>&nbsp;</h3>
+
 					</font></p>
 					<hr />
 					<p><a target="_blank" href="http://">
