--- a/teaching.htm
+++ b/teaching.htm
@@ -204,9 +204,9 @@ border: none;
 
 
 <h3><font size="3">本科授课(Undergraduate Teaching)</font></h3>
-<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）<a target="_blank" href="https://pan.baidu.com/s/19hZKV9rB4_xll8-295gJkQ">课件下载链接</a></p>
-<p>•	高等数学2-2 (课件下载) （Advanced Math.2-2）</p>
-<p>•	学校通识课：<a target="_blank" href="http://www.escience.cn/people/sqzhang/gametheory.html"> 信息与博弈(Information and Games)</a></p>
+<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）</p>
+<p>•	高等数学2-2 (课件下载) （Advanced Math.2-2）<a target="_blank" href="https://pan.baidu.com/share/init?surl=-fJQZaobnCKb6hqEWkpuzw">百度网盘课件下载链接</a>（提取码kc3w）</p>
+<p>•	学校通识课： 信息与博弈(Information and Games)</p>
 <p>•	并行程序设计（Parallel programming)</p>
 <hr />
 <h3><font size="3">研究生授课(Graduate Teaching)</font></h3>
